unpackaged/main/default/objects/pi__AsyncRequest_Settings__c/fields/pi__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>pi__Is_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is Enabled</description>
    <inlineHelpText>Is Enabled</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>