unpackaged/main/default/objects/pi__AsyncRequest_Settings__c/fields/pi__Last_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>pi__Last_Run_Time__c</fullName>
    <description>The last time a given request was run.</description>
    <label>Last run time.</label>
    <type>DateTime</type>
</CustomField>