unpackaged/main/default/objects/pi__AsyncRequest_Settings__c/fields/pi__Next_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>pi__Next_Run_Time__c</fullName>
    <description>The next time a given request is scheduled to run.</description>
    <label>Next run time.</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>